<resources>
    <string name="app_name">Fantozzi</string>
    <string name="app_namesd">Fantozzi SD</string>
    <string name="app_nameweb">Sam Fantozzi WEB</string>
    <string name="app_namelabel">Fantozzi</string>
    <string name="appvyber_name">List of products-edit</string>
    <string name="appnew_name">New item</string>
    <string name="appnewobj_name">New order</string>
    <string name="appedit_name">Editing items</string>
    <string name="apppripoj_name">Join Fantozzi</string>
    <string name="title_activity_ok_pripoj">Connecting Fantozzi is OK</string>
    <string name="title_activity_ok_newobj">New order</string>
    <string name="title_activity_vyberkat">Select a category</string>
    <string name="title_activity_vybertov">Select the product item</string>
    <string name="title_activity_uloztov">The selected product item</string>
    <string name="title_activity_mojkosik">My shopping cart number %s</string>
    <string name="title_activity_zmaztov">Delete item</string>
    <string name="title_activity_objednajkosik">Order my shopping cart</string>
    <string name="title_activity_mojeobj">Unfurnished order</string>
    <string name="title_activity_mojeobjdetaily">Detail of the order</string>
    <string name="title_activity_obsluzit">Service orders</string>
    <string name="title_activity_nodoklad">No items for the operator</string>
    <string name="descimg">Powered by EDcom</string>
    <string name="action_settings">Setting</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_all_products">AllProductsActivity</string>
    <string name="title_activity_new_product">NewProductActivity</string>
    <string name="potrebujeteinternet">For correct function of the program you need to connect to the Internet!</string>
    <string name="potrebujeteinternetsync">For synchonizations you need to connect to the Internet!</string>
    <string name="niejeinternet">You do not have an Internet connection!</string>
    <string name="potrebujeteinternetdemo">For creating DEMO company you need to connect to the Internet!</string>
    <string name="popisbutviewprod">List of products</string>
    <string name="popisbutnewprod">New product</string>
    <string name="popisbutpref">Settings</string>
    <string name="popisbutnewobj">New order</string>
    <string name="popisbutvybertov">Choose an item of goods</string>
    <string name="popisbutvybranytov">My shopping cart</string>
    <string name="popisbtnplus"> + </string>
    <string name="popisbtnminus"> - </string>
    <string name="popisbtnkosik">The shopping cart</string>
    <string name="popisbtnobjednaj">Order</string>
    <string name="popisbutmojeobjednavky">My orders</string>
    <string name="popisbtnprep">Serve</string>
    <string name="popisbtnfin">End</string>
    <string name="popisbtnrefresh">Update</string>
    <string name="popisbtnmydemo">Free DEMO company</string>
    <string name="popisbtneditdemo">Edit DEMO company</string>
    <string name="popisbtncreatedemo">Create Free DEMO company</string>
    <string name="popisbtnmydemook">DEMO company have created</string>
    <string name="popisbtnmydemouzje">DEMO company you have previously registered, access codes we sent to email.</string>
    <string name="settings">Settings</string>
    <string name="add_new_book_summary">Description of the setting of the text.</string>
    <string name="add_new_book_title">Setting text</string>
    <string name="servername_title">Server name.</string>
    <string name="servername_summary">Name of the server to which you want to connect for example www.eshoptest.sk/androiducto</string>
    <string name="nickname_title">Your nickname.</string>
    <string name="nickname_summary">To mark the order</string>
    <string name="druhid_title">Type of user.</string>
    <string name="druhid_summary">The priotity (0,10,20,99) sets program when you connect</string>
    <string name="cisloico_title">Customer ID.</string>
    <string name="cisloico_summary">Setting of customer ID</string>
    <string name="cisloodbm_title">Delivery place.</string>
    <string name="cisloodbm_summary">Delivery place of customer</string>
    <string name="userid_title">User number.</string>
    <string name="userid_summary">Set the program to connect to the Fantozzi - do not change the value</string>
    <string name="mojmail_title">Mail address.</string>
    <string name="mojmail_summary">It is not mandatory, it will send you to login data</string>
    <string name="username_title">Login user name.</string>
    <string name="username_summary"> </string>
    <string name="userpsw_title">User password.</string>
    <string name="userpsw_summary"> </string>
    <string name="doklad_title">The order number.</string>
    <string name="doklad_summary">Program sets the order number when creating a new order</string>
    <string name="mydemo_title">Demo company.</string>
    <string name="mydemo_summary">I have created mz demo company 0=no, 1=yes</string>
    <string name="dokmno_title">Quantity of the order.</string>
    <string name="dokmno_summary">Quantity of the order sets a program for saving goods</string>
    <string name="dokhod_title">The value of the order.</string>
    <string name="dokhod_summary">The value of orders sets the program for saving goods</string>
    <string name="vyhra_title">Winning order.</string>
    <string name="vyhra_summary">The program identifies the order as a winning and send you a warning</string>
    <string name="ordering">Classification List</string>
    <string name="order_by_title">Sorting the list by item</string>
    <string name="desc">Sorting-Ascending / Descending</string>
    <string name="desc_off">Ascending</string>
    <string name="desc_on">Descending</string>
    <string name="tovpricetext">Here will be price</string>
    <string name="preferences">Setting</string>
    <string name="connectserver">Join Fantozzi</string>
    <string name="zoznamtovaru">List of products</string>
    <string name="novytovar">New product</string>
    <string name="popiseditname">Title</string>
    <string name="popiseditprice">Price</string>
    <string name="popiseditmnoz">Quantity</string>
    <string name="popiseditspecify">Description of item</string>
    <string name="popiseditdescription">Description</string>
    <string name="popiseditsave">Save</string>
    <string name="popiseditdelete">Delete</string>
    <string name="popisaddname">Title</string>
    <string name="popisaddprice">Price</string>
    <string name="popisadddescription">Description</string>
    <string name="popisaddcreate">Save</string>
    <string name="progallproducts">Loading the products. Please wait.</string>
    <string name="prognewproducts">Creating product. Please wait.</string>
    <string name="progsavproduct">Saving product. Please wait.</string>
    <string name="progdelproduct">Deleting product. Please wait.</string>
    <string name="progpripojpinkla">Connecting Fantozzi. Please wait.</string>
    <string name="prognewobj">Loading customers. Please wait.</string>
    <string name="prognewodbm">Loading delivery place. Please wait.</string>
    <string name="progukladamobj">Saving a new order. Please wait.</string>
    <string name="progallkategorie">Loading category. Please wait.</string>
    <string name="progobjednajkosik">Ordering shopping cart. Please wait.</string>
    <string name="progmojeobj">Loading the order. Please wait.</string>
    <string name="popisconserver">Where do you want to connect, for example. www.eshoptest.sk/androiducto</string>
    <string name="popisconid">User number</string>
    <string name="popisconnick">Your NickName for identification orders</string>
    <string name="popisconmail">Your email address, we will send you the login data</string>
    <string name="popisconico">ID your company</string>
    <string name="popisconnazov">Name your company</string>
    <string name="popisconrok">Account year</string>
    <string name="byedcomsk">by EDcom.sk</string>
    <string name="fir_title">Firm number </string>
    <string name="fir_summary">Set the program to connect to the Fantozzi - do not change the value</string>
    <string name="popisbtninfo">info PLU</string>
    <string name="sdkarta_title">Date WEB or local.</string>
    <string name="kosikMnoz">items </string>
    <string name="kosikBdph">whVAT %s</string>
    <string name="kosikIco">ID %s</string>
    <string name="popisbtnfakturuj">invoice</string>
	<string name="popisbtnpokl">Cash</string>
    <string name="popisbtnbanka">Bank</string>
    <string name="popisbtndod1">Supplier</string>
    <string name="popisbtnodb1">Customer</string>
    <string name="popisbtnzostavy">Accounting reports</string>
    <string name="popisbtndane">Tax reports</string>
    <string name="popisbtnrozne">Differently</string>
    <string name="pokluce_title">Cash register account.</string>
    <string name="pokluce_summary">Default account for cash register 21100,21101 etc.</string>
    <string name="pokldok_title">Receipt cash document.</string>
    <string name="pokldok_summary">The following number of receipt cash document.</string>
    <string name="pokldov_title">Expense cash dokument.</string>
    <string name="pokldov_summary">The following number of expense cash document.</string>
    <string name="bankuce_title">Bank account.</string>
    <string name="bankuce_summary">Default account for the bank 22100,22101 etc.</string>
    <string name="bankdok_title">Bank document.</string>
    <string name="bankdok_summary">The following number of bank document.</string>
    <string name="spoluhod">The total amount %s Eur</string>
    <string name="popispolozkydok">Dokument item</string>
    <string name="popisbtnfirma">Company</string>
    <string name="popisMnedlzia">receiv.</string>
    <string name="popisJadlzim">payable</string>
    <string name="firnaz_title">Name of company.</string>
    <string name="firnaz_summary">Set the program to connect to Fantozzi.</string>
    <string name="firduct_title">Sort of Accounting 0=double-entry accounting, 9=single-entry accounting.</string>
    <string name="firduct_summary">Set the program to connect to Fantozzi.</string>
    <string name="firdph_title">VAT payment 0=No, 1=monthly, 2=quarterly.</string>
    <string name="firdph_summary">Set the program to connect to Fantozzi.</string>
    <string name="firdph1_title">The reduced rate of VAT No.1 ( 10 % ).</string>
    <string name="firdph1_summary">Set the program to connect to Fantozzi.</string>
    <string name="firdph2_title">Basic, higher VAT rate No.2 ( 20 % ).</string>
    <string name="firdph2_summary">Set the program to connect to Fantozzi.</string>
    <string name="firrok_title">Year accounting period.</string>
    <string name="firrok_summary">Set the program to connect to Fantozzi.</string>
    <string name="ume_title">Accounting period.</string>
    <string name="ume_summary">Setting the accounting period for creating reports, for example 12.2013.</string>
    <string name="popisbtnvyppoh">Transfer report</string>
    <string name="popisbtnhladok">Search documents</string>
    <string name="doduce_title">Account of supplier.</string>
    <string name="doduce_summary">Default account of supplier invoice 32100,32101 etc.</string>
    <string name="doddok_title">Supplier document.</string>
    <string name="doddok_summary">Following document number of supplier invoice.</string>
	<string name="odbuce_title">Account of customer.</string>
    <string name="odbuce_summary">Default account of customer invoice 31100,31101 etc.</string>
    <string name="odbdok_title">Customer document.</string>
    <string name="odbdok_summary">Following document number of customer invoice.</string>
    <string name="popisKluc">Keys from my company</string>
    <string name="overenieIcd">Verification of VAT ID</string>
	<string name="infotext1">Info text1</string>
	<string name="moreinfo">More Info</string>
</resources>