<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <Button android:id="@+id/btnFirma"
        android:layout_width="fill_parent"
        android:text="@string/popisbtnfirma"
        android:textSize="15sp"
    	android:layout_height="40dp"
        android:layout_marginTop="0dip"/>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"> 
    
    <!--  Button Pokladnica -->
    <Button android:id="@+id/btnPokl"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtnpokl"
        android:layout_marginTop="5dip"/>
    
        <!--  Button Banka -->
    <Button android:id="@+id/btnBanka"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtnbanka"
        android:layout_marginTop="5dip"/>
 
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
 
        <Button android:id="@+id/btnOdb1"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtnodb1"
        android:layout_marginTop="5dip"/>
    
    	<Button android:id="@+id/btnDod1"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtndod1"
        android:layout_marginTop="5dip"/>
    
    
 
    </LinearLayout>

    <Button android:id="@+id/btnZostavy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtnzostavy"
        android:layout_marginTop="15dip"/>

	<Button android:id="@+id/btnDane"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtndane"
        android:layout_marginTop="5dip"/>
	
	<Button android:id="@+id/btnRozne"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtnrozne"
        android:layout_marginTop="5dip"/>
        	
    <TextView
        android:id="@+id/mojkosik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
  
        <TextView
        android:id="@+id/inputOrder"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
        
 
    <ImageView
	android:contentDescription="@string/descimg"
	android:id="@+id/casnicka"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
    android:src="@drawable/fantozzi3"/>
  			     
</LinearLayout>
