<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
      
        <LinearLayout android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">      
 
        <Button android:id="@+id/btnUme"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_weight="1"/>
                 
    	<TextView
    	android:id="@+id/obsahKosika"
	    android:gravity="center"
        android:layout_weight="1"
        android:textSize="17sp"
    	android:visibility="invisible"
    	android:layout_width="match_parent"
    	android:layout_height="60dp" />
    	
    	<Button android:id="@+id/btninfo"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:visibility="invisible"
        android:text="@string/popisbtninfo"
        android:layout_weight="1"/>
    
     </LinearLayout>
    
    
    <Button android:id="@+id/btnVypispohybov"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtnvyppoh"
        android:layout_marginTop="5dip"/>
    
    <Button android:id="@+id/btnHladaniedokladov"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtnhladok"
        android:layout_marginTop="5dip"/>
    
    <Button android:id="@+id/btnMnedlzia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisMnedlzia"
        android:layout_marginTop="5dip"/>
    
    <Button android:id="@+id/btnJadlzim"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisJadlzim"
        android:layout_marginTop="5dip"/>
 
    <Button android:id="@+id/btnZamkni"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisKluc"
        android:layout_marginTop="5dip"/>
    
    <Button android:id="@+id/btnOvericdph"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/overenieIcd"
        android:layout_marginTop="5dip"/>

  			     
</LinearLayout>
