<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/pozadie" >
      

    <Button android:id="@+id/btnMoreinfo1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/moreinfo"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"/>
    
    <ImageView
		android:contentDescription="@string/descimg"
		android:id="@+id/imgreklama1"
		android:layout_width="fill_parent"
		android:layout_height="220dp"
		android:layout_gravity="center"
		android:layout_marginTop="5dp"
		android:clickable="true"
    	android:src="@drawable/add1"/>
    
    <TextView
	    android:gravity="center"
    	android:visibility="visible"
    	android:layout_width="match_parent"
    	android:layout_height="5dp"
    	android:layout_marginBottom="5dp" />
    
    <TextView
        android:id="@+id/textreklama1"
	    android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@drawable/white"
    	android:visibility="visible"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/infotext1"
    	android:layout_marginBottom="5dp" />
    

    
  			     
</LinearLayout>
